# cubvh

./: .gitignore  .gitmodules  pyproject.toml  readme.md  setup.py
cubvh/: __init__.py  api.py  sparse_voxel_extractor.py
include/cpu/: api_cpu.h  convert_lattice.h  decimation.h  fill_holes.h  hashtable.h  merge_vertices.h  spmc.h
include/cubvh/: api.h  bounding_box.cuh  bvh.cuh  common.h  floodfill.cuh  gpu_memory.h  pcg32.h  spcumc.cuh  triangle.cuh
include/gpu/: api_gpu.h  bounding_box.cuh  bvh.cuh  common.h  floodfill.cuh  gpu_memory.h  hashtable.cuh  pcg32.h  spcumc.cuh  sperode.cuh  triangle.cuh
sparseflex/: flexicube.py
src/: api.cu  api_gpu.cu  bindings.cpp  bvh.cu
test/: benchmark_watertight.py  blockcubes.py  cuhashtable.py  decimation.py  extract_mesh_occupancy.py  extract_mesh_watertight.py  hashtable.py  lazy_gpu_initialization.py  merge_vertices.py  renderer.py  repair_holes.py  signed_distance.py  sparse_voxel.py  state_dict.py  test_sparse_erode.py  unsigned_distance.py  watertight_remesh.py
