[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "torch",
  "ninja",
  "pybind11",
]
build-backend = "setuptools.build_meta"

[project]
name = "cubvh"
version = "0.1.1"
description = "CUDA BVH implementation"
readme = "readme.md"
requires-python = ">=3.8"
authors = [{ name = "kiui", email = "ashawkey1999@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["CUDA", "BVH", "geometry", "mesh", "sdf", "3D"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "ninja",
  "pybind11",
  "trimesh",
  "torch",
  "numpy",
  "kiui",
]

[project.urls]
Homepage = "https://github.com/ashawkey/cubvh"
Repository = "https://github.com/ashawkey/cubvh"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cubvh"]


