[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "ninja",
  "pybind11",
]
build-backend = "setuptools.build_meta"

[project]
name = "cubvh"
version = "0.1.2"
description = "CUDA BVH implementation"
readme = "readme.md"
requires-python = ">=3.8"
authors = [{ name = "kiui", email = "ashawkey1999@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
  "ninja",
  "pybind11",
  "trimesh",
  "torch",
  "numpy",
  "kiui",
]

[project.urls]
Repository = "https://github.com/ashawkey/cubvh"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cubvh"]